[workspace]
resolver = "2"
members = [
    "apps/brush-app",
    "apps/brush-c",
    "apps/brush-cli",
    "apps/brush-js",
    "crates/brush-async",
    "crates/brush-bench-test",
    "crates/brush-cube",
    "crates/brush-dataset",
    "crates/brush-loss",
    "crates/brush-prefix-sum",
    "crates/brush-process",
    "crates/brush-render",
    "crates/brush-render-bwd",
    "crates/brush-rerun",
    "crates/brush-serde",
    "crates/brush-serde-macros",
    "crates/brush-sort",
    "crates/brush-train",
    "crates/brush-vfs",
    "crates/colmap-reader",
    "crates/lpips",
    "crates/lpips-convert",
    "crates/rrfd",
]
default-members = ["apps/brush-app"]

[workspace.package]
edition = "2024"
version = "0.3.0"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/ArthurBrussee/brush"

[workspace.dependencies]
glam = { version = "0.30", features = ["serde"] }
bytemuck = "1.20"
image = { version = "0.25", default-features = false, features = [
    'png',
    'webp',
    "jpeg",
    'exr'
] }
# Direct dep alongside `image` — only this crate exposes IDCT scale-on-decode,
# which lets us decode large JPEGs at 1/2, 1/4, or 1/8 size.
jpeg-decoder = "0.3"

serde = { version = "1.0.215", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0.133", default-features = false }

rand = "0.10.0"
tracing = "0.1.41"
tracing-tracy = "0.11.3"
tracing-subscriber = "0.3.19"

winapi = { version = "0.3", features = ["wincon"] }

tokio = { version = "1.42.0", default-features = false }
tokio-stream = "0.1"
tokio-util = { version = "0.7.13", features = ["io"] }
async-channel = "2.5.0"

anyhow = "1.0.94"
thiserror = "2.0"

reqwest = { version = "0.13", default-features = false, features = [
    "stream",
] }

indicatif = "0.18"
env_logger = "0.11"
clap = { version = "4.5.23", features = ["derive"] }
parse-size = "1.1"

web-time = "1.1.0"
humantime = "2.1.0"
async-fn-stream = "0.3"
assert_approx_eq = "1.1.0"
safetensors = "0.7"
log = "0.4.22"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
wasm-streams = "0.6"

rayon = "1.11"

# Backends are chosen per platform.
wgpu = { version = "29", default-features = false, features = ["naga-ir"] }

serde-ply = "0.2.1"

# `default-features = false` re-lists burn's default set minus `rl`: burn-rl
# enables `burn-core/dataset`, which pulls gix-tempfile -> signal-hook-registry
# -> errno, none of which compile for wasm32. Brush has its own dataset stack
# and no RL, so dropping `rl` keeps the wasm build green.
burn = { git = "https://github.com/tracel-ai/burn", branch = "main", default-features = false, features = [
    'std',
    'optim',
    'extension',
] }
burn-cubecl = { git = "https://github.com/tracel-ai/burn", branch = "main" }
burn-ir = { git = "https://github.com/tracel-ai/burn", branch = "main" }
burn-wgpu = { git = "https://github.com/tracel-ai/burn", branch = "main", features = [
    "exclusive-memory-only",
] }
burn-fusion = { git = "https://github.com/tracel-ai/burn", branch = "main" }
# `pytorch` is only needed by lpips-convert (one-off weight conversion tool).
# Enabled there directly so the main graph doesn't grow `zip 8` and its newer
# crypto family (digest 0.11, hmac 0.13, ...).
burn-store = { git = "https://github.com/tracel-ai/burn", branch = "main" }

egui = { version = "0.34.3"  }
eframe = { version = "0.34.3", default-features = false, features = [
    "wgpu",
    "android-game-activity",
    "wayland",
    "x11",
    "persistence",
] }

egui_tiles = { version = "0.15", features = ["serde"] }

rerun = { version = "0.33", default-features = false, features = [
    'sdk',
    'glam',
] }

ball-tree = "0.5.1"
web-sys = { version = "0.3.74" }
async_zip = { version = "0.0.18", default-features = false, features = ["tokio", "deflate"] }
hashbrown = "0.16"
alphanumeric-sort = "1.5.3"

# Uncomment this to use local wgpu and naga.
# wgpu.path = "../wgpu/wgpu"
# naga.path = "../wgpu/naga"

[profile.dev]
opt-level = 1
# Reduce debuginfo for faster linking
debug = 1

[profile.release]
lto = "thin"

[profile.dist]
inherits = "release"
lto = true
opt-level = 3

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
as_ptr_cast_mut = "warn"
await_holding_lock = "warn"
bool_to_int_with_if = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
derive_partial_eq_without_eq = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
empty_enum_variants_with_brackets = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
fn_to_numeric_cast_any = "warn"
from_iter_instead_of_collect = "warn"
get_unwrap = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
implied_bounds_in_impls = "warn"
imprecise_flops = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
into_iter_without_iter = "warn"
invalid_upcast_comparisons = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_without_into_iter = "warn"
large_digit_groups = "warn"
large_include_file = "warn"
large_stack_arrays = "warn"
large_stack_frames = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_instant_elapsed = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
mismatching_type_param_order = "warn"
missing_enforced_import_renames = "warn"
missing_safety_doc = "warn"
mixed_attributes_style = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
needless_lifetimes = "warn"
negative_feature_names = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
print_stderr = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
pub_underscore_fields = "warn"
pub_without_shorthand = "warn"
rc_mutex = "warn"
readonly_write_lock = "warn"
redundant_type_annotations = "warn"
ref_as_ptr = "warn"
ref_option_ref = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
single_char_pattern = "warn"
single_match_else = "warn"
str_split_at_newline = "warn"
str_to_string = "warn"

string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suspicious_command_arg_space = "warn"
suspicious_xor_used_as_pow = "warn"
todo = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
tuple_array_conversions = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
uninhabited_references = "warn"
uninlined_format_args = "warn"
unnecessary_safety_doc = "warn"
unnecessary_struct_initialization = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
unused_self = "warn"
use_self = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "warn"
wildcard_imports = "warn"
zero_sized_map_values = "warn"
redundant_clone = "warn"

iter_over_hash_type = "warn"
missing_assert_message = "warn"
should_panic_without_expect = "warn"


# Too many false positives
significant_drop_tightening = "allow"

# For WASM this is quite common
arc_with_non_send_sync = "allow"

# TODO: More docs
missing_errors_doc = "allow"
new_without_default = "allow"

# # These are meh:
# Annoying: Some functions need Box so don't want to force user to to do this.
# unnecessary_box_returns = "allow"
# Annoying: Some arms logically are different even if they do the same thing.
# match_same_arms = "allow"
# Annoying: operators are fine.
# string_add = "allow"
# string_add_assign = "allow"
# Annoying: I like big functuions what can I say.
too_many_lines = "allow"
too_many_arguments = "allow"
needless_range_loop = "allow"

# This doesn't quite work with Burn:
single_range_in_vec_init = "allow"

# wgpu fork with WebGPU subgroups feature mapping + JS interop accessors
# (needed for our backward kernel's subgroupAdd/subgroupAny on web, and for
# brush-js to expose the underlying GPUDevice/GPUBuffer to JS). Our js-interop
# wgpu rides trunk (for cubecl-wgpu's transition_resources and
# Result<BufferView> from get_mapped_range), and carries a small patch raising
# Metal's per-stage buffer limits back to the v29.0.1 relaxed values — trunk
# still ships the conservative 8/12/8 split from #9118 (tracked by #9287).
#
# Trunk also added AdapterInfo::limit_bucket which trips egui-wgpu 0.34.3;
# fixed on the egui fork — bump together since egui is a workspace.
[patch.crates-io]
wgpu                 = { git = "https://github.com/ArthurBrussee/wgpu", branch = "js-interop" }
wgpu-core            = { git = "https://github.com/ArthurBrussee/wgpu", branch = "js-interop" }
wgpu-hal             = { git = "https://github.com/ArthurBrussee/wgpu", branch = "js-interop" }
wgpu-types           = { git = "https://github.com/ArthurBrussee/wgpu", branch = "js-interop" }
naga                 = { git = "https://github.com/ArthurBrussee/wgpu", branch = "js-interop" }
egui                 = { git = "https://github.com/ArthurBrussee/egui", branch = "wgpu-trunk-compat-0.34.3" }
eframe               = { git = "https://github.com/ArthurBrussee/egui", branch = "wgpu-trunk-compat-0.34.3" }
egui-wgpu            = { git = "https://github.com/ArthurBrussee/egui", branch = "wgpu-trunk-compat-0.34.3" }
egui-winit           = { git = "https://github.com/ArthurBrussee/egui", branch = "wgpu-trunk-compat-0.34.3" }
egui_glow            = { git = "https://github.com/ArthurBrussee/egui", branch = "wgpu-trunk-compat-0.34.3" }
ecolor               = { git = "https://github.com/ArthurBrussee/egui", branch = "wgpu-trunk-compat-0.34.3" }
emath                = { git = "https://github.com/ArthurBrussee/egui", branch = "wgpu-trunk-compat-0.34.3" }
epaint               = { git = "https://github.com/ArthurBrussee/egui", branch = "wgpu-trunk-compat-0.34.3" }
epaint_default_fonts = { git = "https://github.com/ArthurBrussee/egui", branch = "wgpu-trunk-compat-0.34.3" }

# cubecl-wgpu pins wgpu to a specific git rev of gfx-rs/wgpu (not crates.io),
# so the patch above doesn't catch it — redirect that source too, otherwise we
# end up with two parallel wgpu trees.
[patch."https://github.com/gfx-rs/wgpu.git"]
wgpu       = { git = "https://github.com/ArthurBrussee/wgpu", branch = "js-interop" }
wgpu-core  = { git = "https://github.com/ArthurBrussee/wgpu", branch = "js-interop" }
wgpu-hal   = { git = "https://github.com/ArthurBrussee/wgpu", branch = "js-interop" }
wgpu-types = { git = "https://github.com/ArthurBrussee/wgpu", branch = "js-interop" }
naga       = { git = "https://github.com/ArthurBrussee/wgpu", branch = "js-interop" }

# To iterate locally on a checkout, swap each `git = "..."` for
# `path = "../cubecl/crates/<name>"`.
